# feedBack-desktop

./: .build-config.json  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.md  WINDOWS_BUILD_REQUIREMENTS.md  package.json
.devcontainer/: README.md  devcontainer.json
.github/workflows/: addon-ci.yml  build.yml  nightly.yml  rc.yml  release.yml  sandbox.yml
.packages/: brew.txt
.specify/memory/: constitution.md
cmake/: onnxruntime.cmake
docs/: BUILD_ARCHITECTURE.md
resources/icons/: icon.icns
scripts/: build-audio.sh  build-common.sh  build-linux-ubuntu.sh  build-macos.sh  bundle-binaries.sh  bundle-python.sh  bundle-slopsmith.sh  sign-macos-binaries.sh
src/audio/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  ChordScorer.h  NodeAddon.cpp  NoteVerifier.cpp  NoteVerifier.h  SignalChain.cpp  SignalChain.h
src/audio/Sandbox/: AudioChannel.h  AudioChannelImpl.h  AudioChannel_posix.cpp  AudioChannel_shared.cpp  AudioChannel_win.cpp  ControlChannel.h  ControlChannelImpl.h  ControlChannel_posix.cpp  ControlChannel_shared.cpp  ControlChannel_win.cpp  SandboxFactory_posix.cpp  SandboxFactory_shared.cpp  SandboxFactory_win.cpp  SandboxedProcessor.cpp  SubprocessHandle.h  SubprocessHandleImpl.h  SubprocessHandle_posix.cpp  SubprocessHandle_win.cpp
src/main/: audio-bridge.ts  audio-effects-executor.ts  ipc-channels.ts  main.ts  preload.ts  python.ts  soundfont-manager.ts  update-manager.ts
src/renderer/: screen.js  settings.html
tests/: CMakeLists.txt  macos-universal-x64-arch-files.test.js
tests/sandbox/: CMakeLists.txt  audio_channel_midi_test.cpp  control_channel_test.cpp  spawn_smoke_child.cpp  spawn_smoke_test.cpp
tests/sandbox/e2e/: passthrough.cpp
tests/sandbox/standalone/: CMakeLists.txt
